src/coolcmp/unit_tests/Custom/type_checker/fail/assign2.cl
class Main inherits IO {
    a: String;

    main(): Int { a <- "w" };
};
